# wazuh-mcp

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksallow  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/commands/: eval-wazuh-mcp.md
.github/: dependabot.yml  pull_request_template.md  security-ignores.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  destructive-integration.yml  helm-lint.yml  integration-log-scan.yml  integration.yml  multi-manager-integration.yml  release.yml  security-ignores-expiry.yml  security.yml
charts/wazuh-mcp/: .helmignore  Chart.yaml  values.yaml
charts/wazuh-mcp/templates/: _helpers.tpl  configmap-tenants.yaml  deployment.yaml  ingress.yaml  networkpolicy.yaml  role.yaml  rolebinding.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docker/: .gitignore  README.md  bootstrap.sh  integration-compose.yml  multi-manager-compose.yml  seed_alerts.py
docker/config/: certs.yml  keycloak-realm.json  opensearch.yml  wazuh_manager_ossec.conf
docker/vault/: README.md
docker/wazuh-agent/: Dockerfile  entrypoint.sh
docs/: api-reference.md
docs/deploy/: README.md  api-keys.md  helm.md  install.md  m4a-observability.md  m4a-secrets.md  m4b-writes.md  m4c-multi-tenant.md  m5a-quality-gates.md  multi-tenant.md  oauth.md  observability.md  quality-gates.md  redis.md  secrets.md  tenants.md  tools.md  writes.md
docs/deploy/_archive/: README.md  m2-http.md  m3-tools.md  m4a-audit.md  m4b-writes.md  m4d-multi-tenant-runtime.md
docs/deploy/oauth-setup/: auth0.md  entra.md  keycloak.md  okta.md
docs/eval/: README.md
docs/eval-history/: 2026-05-02-claude-opus-4-7-results-raw.json  2026-05-02-claude-opus-4-7-results.json  2026-05-03-claude-opus-4-7-results-raw.json  2026-05-03-claude-opus-4-7-results.json  2026-05-04-claude-opus-4-7-results-raw.json  2026-05-04-claude-opus-4-7-results.json
docs/eval/corpus/: multi_step.yaml  selection_only.yaml  with_args.yaml
docs/security/: threat-model.md
docs/superpowers/notes/: 2026-04-24-fastmcp-list-tools-probe.md  2026-04-24-toolset-sdk-probe.md  2026-05-01-audit-routing-investigation.md
docs/superpowers/plans/: 2026-04-20-wazuh-mcp-m1-walking-skeleton.md  2026-04-21-wazuh-mcp-m2-oauth-http.md  2026-04-22-wazuh-mcp-m3-tool-surface.md  2026-04-23-wazuh-mcp-m4a-hardening.md  2026-04-24-wazuh-mcp-m4b-writes.md  2026-04-27-wazuh-mcp-m4c-plan.md  2026-04-27-wazuh-mcp-m4d-plan.md  2026-04-28-wazuh-mcp-m5a-plan.md  2026-05-01-wazuh-mcp-m5b-plan.md  2026-05-02-redis-rate-limiter-plan.md  2026-05-04-audit-dedup-plan.md
docs/superpowers/retros/: 2026-04-20-m1-retro.md  2026-04-21-m2-retro.md  2026-04-22-m3-retro.md  2026-04-24-m4a-retro.md  2026-04-24-m4b-retro.md  2026-04-27-m4c-retro.md  2026-04-27-m4d-retro.md  2026-05-01-m5a-retro.md  2026-05-01-m5b-retro.md
docs/superpowers/specs/: 2026-04-20-wazuh-mcp-design.md  2026-04-21-wazuh-mcp-m2-design.md  2026-04-22-wazuh-mcp-m3-design.md  2026-04-23-wazuh-mcp-m4a-hardening-design.md  2026-04-24-wazuh-mcp-m4b-design.md  2026-04-27-wazuh-mcp-m4c-design.md  2026-04-27-wazuh-mcp-m4d-design.md  2026-04-27-wazuh-mcp-m5a-design.md  2026-05-01-wazuh-mcp-m5b-design.md  2026-05-02-redis-rate-limiter-design.md  2026-05-04-audit-dedup-design.md
src/wazuh_mcp/: __main__.py  server.py
src/wazuh_mcp/auth/: api_key.py  api_key_store.py  chain_factory.py  config_factory.py  errors.py  factory.py  jwks_cache.py  oauth.py  session.py
src/wazuh_mcp/observability/: audit.py  audit_context.py  decorators.py  instrumentation.py  metrics.py  otel.py
src/wazuh_mcp/prompts/: __init__.py  agent_posture.py  investigate_alert.py  triage_last_hour.py
src/wazuh_mcp/rate_limit/: limiter.py  redis_limiter.py  token_bucket.py
src/wazuh_mcp/rbac/: filter.py  policy.py  resolver.py
src/wazuh_mcp/resources/: __init__.py  agent_config.py  mitre.py  rules.py
src/wazuh_mcp/secrets/: aws_sm.py  caching.py  sqlite_age.py  store.py  value.py  vault.py  yaml_driver.py
src/wazuh_mcp/tenancy/: config.py  issuer_index.py  m4_config.py  registry.py
src/wazuh_mcp/tools/: agents.py  alerts.py  cluster.py  fim.py  hunt.py  mitre.py  vulns.py  write.py
src/wazuh_mcp/transport/: __init__.py  http.py  session_ctx.py  stdio.py
src/wazuh_mcp/wazuh/: errors.py  indexer.py  indexer_pool.py  models.py  (+4 more)
tests/: conftest.py
tests/fixtures/: jwt_factory.py
tests/integration/: _helpers.py  _jwks_sidecar.py  _vault_bootstrap.py  conftest.py  test_audit_dedup_real.py  test_m4a_audit_indexer_sink.py  test_m4a_metrics.py  test_m4a_rate_limit.py  test_m4a_rbac.py  test_m4b_writes.py  test_m4c_writes.py  test_m4d_multi_tenant.py  test_m5b_group_ar.py  test_multi_manager.py  test_oauth_e2e.py  test_prompts_integration.py  test_redis_limiter_real.py  test_resources_integration.py  test_search_alerts_e2e.py  test_tools_integration.py  test_vault_secret_store.py
tests/security/: test_m2_negatives.py
tests/unit/: test_alert_model.py  test_api_key_factory.py  test_api_key_store.py  test_ar_group_allowlist.py  test_asgi_composition.py  test_audit.py  test_audit_context.py  test_audit_dedup.py  test_audit_emitter.py  test_audit_emitter_lifecycle_multi_tenant.py  test_auth_errors.py  test_aws_sm_store.py  test_caching_secret_store.py  test_chain_factory.py  test_cluster_status.py  test_config_factory.py  test_error_mapper.py  test_eval_score.py  test_file_sink.py  test_healthz_readyz.py  test_http_app_config.py  test_http_sink.py  test_http_www_authenticate.py  test_hunt_query_fuzz.py  test_indexer_client.py  test_indexer_pool.py  test_instrumentation.py  test_instrumented_tool.py  test_issuer_index.py  test_jwks_cache.py  test_m4c_per_tenant_policy.py  test_metrics_route.py  test_models_m3.py  test_multi_agent_ar.py  test_multi_sink_audit.py  test_oauth_factory.py  test_oauth_http_mw.py  test_otel_bootstrap.py  test_per_tenant_rate_limiter.py  test_per_tenant_sink_fanout.py  (+56 more)
tools/: check_security_ignores.py
tools/eval/: README.md  score.py  thresholds.yaml
(+7 files in other folders)
