[project]
name = "wazuh-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Wazuh SIEM/XDR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
]

[project.scripts]
wazuh-mcp = "wazuh_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "hypothesis>=6.100",
    "ruff>=0.5.0",
    "ty>=0.0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wazuh_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests requiring docker-compose Wazuh",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"

[tool.ty.src]
include = ["src/**/*.py", "tests/**/*.py"]

# Tests intentionally trigger validation errors (e.g., passing bare strings to
# pydantic HttpUrl fields, unknown kwargs to forbid-extra models, mutating
# frozen dataclasses) to prove the invariants hold. Downgrade ty noise there.
[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unknown-argument = "ignore"
invalid-assignment = "ignore"
