[project]
name = "wazuh-mcp"
version = "1.2.0"
description = "Model Context Protocol server for Wazuh SIEM/XDR"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.1",
    "httpx>=0.27.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.1",
    "joserfc>=1.6.5",
    "argon2-cffi>=25.1.0",
    "uvicorn[standard]>=0.46.0",
    "aioboto3>=15.5.0,<16",
    "hvac>=2.3,<3",
    "pyrage>=1.2,<2",
    "aiosqlite>=0.22.1,<0.23",
    "opentelemetry-api>=1.41.1,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-prometheus>=0.62b1,<1",
    "opentelemetry-instrumentation-httpx>=0.48b0,<1",
    "opentelemetry-instrumentation-starlette>=0.48b0,<1",
    "redis>=5.0,<6",
]

[project.scripts]
wazuh-mcp = "wazuh_mcp.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "hypothesis>=6.152.6",
    "ruff>=0.15.12",
    "ty>=0.0.35",
    "moto[secretsmanager]>=5.1.22,<6",
    "opensearch-py>=2.7,<3",
    "pip-audit>=2.7,<3",
    "safety>=3.2,<4",
    "fakeredis[lua]>=2.20,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wazuh_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: end-to-end tests requiring docker-compose Wazuh",
    "requires_manager: requires wazuh-manager container; auto-skipped on arm64+darwin (QEMU segfault)",
    "destructive: mutates shared docker state — runs in destructive-integration.yml only",
    "multi_manager: requires two distinct Wazuh clusters (multi-manager-integration.yml)",
    "vault: requires Vault container in integration-compose.yml",
]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "N", "ASYNC"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.ty.environment]
python = ".venv"
python-version = "3.12"

[tool.ty.src]
include = ["src/**/*.py", "tests/**/*.py"]

# Tests intentionally trigger validation errors (e.g., passing bare strings to
# pydantic HttpUrl fields, unknown kwargs to forbid-extra models, mutating
# frozen dataclasses) to prove the invariants hold. Downgrade ty noise there.
[[tool.ty.overrides]]
include = ["tests/**/*.py"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
unknown-argument = "ignore"
invalid-assignment = "ignore"
# Note: ``★ "<param> is unused"`` warnings on integration-test fixture
# parameters (e.g. ``mcp_http_server`` argued for its pytest-fixture
# side effect) are intentional. ty has no rule name to silence them
# selectively as of v0.0.x — accepting the noise rather than disabling
# all unused-binding checks across tests/.
